<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".AddNewTaskActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/action_bar_txt"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/event_name"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/txt_bg"
            android:fontFamily="@font/inter"
            android:hint="@string/input_task_here"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#B1AEC1"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/inter_semibold"
            android:text="Event description"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/txt_bg"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_bg"
                android:fontFamily="@font/inter"
                android:hint="@string/enter_desc"
                android:padding="@dimen/_10sdp"
                android:textColor="#B1AEC1"
                android:textColorHint="#B1AEC1"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/inter_semibold"
            android:text="Venue"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/txt_bg"
            android:fontFamily="@font/inter"
            android:hint="Enter Address..."
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#B1AEC1"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/inter_semibold"
            android:text="Map Link"
            android:textSize="@dimen/_14ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"

            android:background="@drawable/circle_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMapLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:hint="@string/search_task_here"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="#0B0A11B2"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"

                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edtMapLink"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/inter_semibold"
            android:text="Remin Me"
            android:textSize="@dimen/_14ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bg"

            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/data_time"
                    android:textColor="#7E0A1166"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tvDateTIme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="Feb 12, 2021 - 9:30 AM"
                    android:textColor="#0B0A11"
                    android:textSize="@dimen/_16ssp"

                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/viewEdit"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/plus_inner_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgEdit"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/edit"

                app:layout_constraintBottom_toBottomOf="@+id/viewEdit"
                app:layout_constraintEnd_toEndOf="@+id/viewEdit"
                app:layout_constraintStart_toStartOf="@+id/viewEdit"
                app:layout_constraintTop_toTopOf="@+id/viewEdit" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/inter_bold"
        android:text="Save Task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>