<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@color/white"
        android:paddingStart="@dimen/_30sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnrHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgHome"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/home"
                android:tint="#7EBB4F"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnrHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgHistory"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_history"
                android:tint="#8D2D2D30"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="@string/history"
                android:textAlignment="center"
                android:textColor="#8D2D2D30"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/plus_outer_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"

            android:background="@drawable/plus_inner_circle"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAdd"
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:src="@drawable/plus"

            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:text="@string/add_task"
        android:textAlignment="center"
        android:textColor="#7EBB4F"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />




</androidx.constraintlayout.widget.ConstraintLayout>